# CO2Alarm-CPP

./: CMakeLists.txt  README.md  pimoroni_pico_import.cmake
src/: CMakeLists.txt  main.cpp
